# wolf

./: .pre-commit-config.yaml  Cargo.toml  README.md  commitlint.config.js  index.html
.cargo/: config.toml
assets/: manifest.json  sw.js
src/: app.rs  lib.rs  main.rs  widgets.rs
src/apps/: addressbook.rs  calendar.rs  mail.rs  mod.rs
