cargo-features = ["per-package-target"]

[package]
name = "spider_head"
version = "0.1.0"
authors = ["Manuel Altalef <maltalef@auror.ar>"]
edition = "2021"
rust-version = "1.60"
default-target = "wasm32-unknown-unknown"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = { version = "0.19.0" }
eframe = { version = "0.19.0", features = ["persistence"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1.37"
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
chrono = { version = "0.4.22", features = ["serde"] }
reqwest-wasm = "0.11.15"
reqwest = { version = "0.11.12", features = ["json"] }

