
[package]
name = "wolf"
version = "0.1.0"
authors = ["Manuel Altalef <maltalef@auror.ar>"]
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = { version = "0.19.0" }
eframe = { version = "0.19.0", features = ["persistence"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1.37"
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
trunk = "0.16.0"
